--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     )
 
     compile (
-            "io.netty:netty-all:4.1.39.Final"
+            "io.netty:netty-all:4.1.39.Final",
+            "org.apache.commons:commons-lang3:3.4"
     )
 }
